# ai-agent

./: .gitignore  CHANGELOG.md  pyproject.toml
src/ai-agent/: config.py  main.py
src/ai_agent/: config.py  main.py
tests/: test_main.py
