[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "ai-agent"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[logfire,openai]>=0.0.43",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py38']

[tool.uv]
resolution = "highest"

[tool.hatch.version]
source = "uv-dynamic-versioning"

