# uv init --name ai-agent --no-description --vcs git --build-backend setuptools --author-from git --no-workspace

[project]
name = "ai-agent"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Yann de Thé", email = "ydethe@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[logfire,openai]>=0.0.43",
    "pydantic-settings>=2.8.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/ydethe/ai-agent/-/issues"
Homepage = "https://github.com/ydethe/ai-agent"
Source = "https://github.com/ydethe/ai-agent"

[project.scripts]
ai-agent = "ai_agent:main"

[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black==22.3.0",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
doc = [
    "pdoc3>=0.11.3",
    "pylint>=3.3.2",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-instafail>=0.5.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-sugar>=1.0.0",
]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=htmldoc/tests/report.html",
    "--self-contained-html",
    "--junitxml=htmldoc/junit.xml",
    "--cov-config=tests/coverage.conf",
    "--cov={{python_package_import_name}}",
    "--doctest-modules"
]
testpaths = [
    "tests/",
]

[tool.uv]
resolution = "highest"

[tool.setuptools_scm]


